feat(contact): add contact section styles

--- a/index.html
+++ b/index.html
@@ -235,38 +235,42 @@
     </section>
 
     <section class="articles__item" id="contact_us">
-        <div class="contact__blocks">
-            <span class="article__name">Connect</span>
-            <h2 class="title">Contact LifeBlend</h2>
-            <p>Have a question or need assistance? We're here to help!</p>
+        <div class="article__content">
+            <div class="contact__text">
+                <span class="article__name">Connect</span>
+                <h2 class="title">Contact LifeBlend</h2>
+                <p>Have a question or need assistance? We're here to help!</p>
+            </div>
 
             <div class="contact__block">
                 <img src="images/icons/Mail.png" height="32" width="32" alt="mail"/>
-                <h3 class="contact__description">Email</h3>
+                <h3 class="subtitle">Email</h3>
                 <span>Send us an email</span>
                 <a href="mailto:hello@lifeblendhub.com">hello@lifeblendhub.com</a>
             </div>
 
             <div class="contact__block">
                 <img src="images/icons/Phone.png" height="32" width="32" alt="phone"/>
-                <h3 class="contact__description">Phone</h3>
+                <h3 class="subtitle">Phone</h3>
                 <span>Give us a call</span>
-                <a href="tel:+1-555-123-4567">+1 (555) 123-4567</a>
+                <span>+1 (555) 123-4567</span>
             </div>
 
-            <div class="contact__block">
-                <img src="images/icons/Geo.png" height="32" width="32" alt="geo position"/>
-                <h3 class="contact__description">Office</h3>
-                <span>123 Main St, Anytown, USA</span>
-            </div>
+            <div class="directions">
+                <div class="contact__block">
+                    <img src="images/icons/Geo.png" height="32" width="32" alt="geo position"/>
+                    <h3 class="subtitle">Office</h3>
+                    <span>123 Main St, Anytown, USA</span>
+                </div>
 
-            <div class="actions">
-                <button class="btn">Get Directions</button>
-                <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                <div class="actions">
+                    <button class="btn">Get Directions</button>
+                    <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                </div>
             </div>
         </div>
 
-        <img src="images/articles/connect_tennis.png" height="442" width="601" alt="tennis"/>
+        <img class="img__contact" src="images/articles/connect_tennis.png" height="442" width="601" alt="tennis"/>
     </section>
 </main>
 
