--- a/index.html
+++ b/index.html
@@ -275,7 +275,73 @@
 </main>
 
 <footer class="footer">
+    <div class="footer__content">
+        <div class="footer__text">
+             <span class="logo">Logo</span>
+             <p>Stay up to date on the latest features and releases by joining our newsletter.</p>
+         </div>
 
+        <div class="footer__input">
+            <form class="footer__form">
+                <input class="input" type="email" name="user_email" placeholder="Your email">
+                <button class="btn btn--secondary">Subscribe</button>
+            </form>
+
+            <small class="terms">By subscribing, you agree to our Privacy Policy and consent to receive updates from our company.</small>
+        </div>
+    </div>
+
+    <div class="footer__blocks">
+        <div class="footer__block">
+            <h3 class="subtitle">Column one</h3>
+
+            <div class="footer__links">
+                <a>Link one</a>
+                <a>Link two</a>
+                <a>Link three</a>
+                <a>Link four</a>
+                <a>Link five</a>
+            </div>
+        </div>
+
+        <div class="footer__block">
+            <h3 class="subtitle">Column two</h3>
+
+            <div class="footer__links">
+                <a>Link one</a>
+                <a>Link two</a>
+                <a>Link three</a>
+                <a>Link four</a>
+                <a>Link five</a>
+            </div>
+        </div>
+
+        <div class="footer__block">
+            <h3 class="subtitle">Follow us</h3>
+
+            <div class="footer__links">
+                <div class="social__media">
+                    <img src="images/icons/Facebook.png" height="24" width="24" alt="Facebook"/>
+                    <a>Facebook</a>
+                </div>
+
+                <div class="social__media">
+                    <img src="images/icons/Instagram.png" height="20" width="20" alt="Instagram"/>
+                    <a>Instagram</a>
+                </div>
+
+                <div class="social__media">
+                    <img src="images/icons/Linkedin.png" height="24" width="24" alt="Linkedin"/>
+                    <a>Linkedin</a>
+                </div>
+
+                <div class="social__media">
+                    <img src="images/icons/Youtube.png" height="24" width="24" alt="Youtube"/>
+                    <a>Youtube</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
