fix(img): fix images format to webp

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preload" href="images/articles/hero_yoga.png" as="image" fetchpriority="high">
+    <link rel="preload" href="images/articles/hero_yoga.webp" as="image" fetchpriority="high">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
 
 <main class="main">
     <section class="hero">
-        <img src="images/articles/hero_yoga.png"
+        <img src="images/articles/hero_yoga.webp"
              alt="yoga"
              class="hero__image"
              height="663"
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <img class="img__revolutionize" src="images/articles/revolutionize_section.png" height="601" width="601"
+            <img class="img__revolutionize" src="images/articles/revolutionize_section.webp" height="601" width="601"
                  alt="tennis"/>
         </article>
 
@@ -105,7 +105,7 @@
 
             <div class="discover1__blocks">
                 <div class="discover1__block">
-                    <img src="images/articles/discover1_health_and_wellness.png" height="222" width="395"
+                    <img src="images/articles/discover1_health_and_wellness.webp" height="222" width="395"
                          alt="picture of running field"/>
                     <h3 class="subtitle">Health and Wellness</h3>
                     <p class="block__description">Discover expert advice and tips on maintaining a healthy
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="discover1__block">
-                    <img src="images/articles/discover1_boost_your_productivity.png" height="222" width="395"
+                    <img src="images/articles/discover1_boost_your_productivity.webp" height="222" width="395"
                          alt="picture of basketball"/>
                     <h3 class="subtitle">Boost Your Productivity</h3>
                     <p class="block__description">Learn effective strategies to maximize your productivity and
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="discover1__block">
-                    <img src="images/articles/discover1_find_joy_in_leisure.png" height="222" width="395"
+                    <img src="images/articles/discover1_find_joy_in_leisure.webp" height="222" width="395"
                          alt="floor of basketball"/>
                     <h3 class="subtitle">Find Joy in Leisure</h3>
                     <p class="block__description">Discover exciting activities and hobbies to make the most of your
@@ -153,7 +153,7 @@
                 </div>
             </div>
 
-            <img class="img__discover2" src="images/articles/discover2_bicycle.png" height="601" width="601" alt="bicycle"/>
+            <img class="img__discover2" src="images/articles/discover2_bicycle.webp" height="601" width="601" alt="bicycle"/>
         </article>
 
         <article class="articles__item article__discover3" id="explore">
@@ -161,7 +161,7 @@
 
             <div class="discover3__blocks">
                 <div class="discover3__block">
-                    <img src="images/articles/discover3_unlock.png" height="222" width="395" alt="running road"/>
+                    <img src="images/articles/discover3_unlock.webp" height="222" width="395" alt="running road"/>
                     <h3 class="subtitle">Unlock Your Full Potential with LifeBlend Hub's Comprehensive Content</h3>
                     <p class="block__description">Engage with our curated content and resources to enhance every aspect of your lifestyle.</p>
 
@@ -172,7 +172,7 @@
                 </div>
 
                 <div class="discover3__block">
-                    <img src="images/articles/discover3_stay.png" height="222" width="393" alt="man lay on running road"/>
+                    <img src="images/articles/discover3_stay.webp" height="222" width="393" alt="man lay on running road"/>
                     <h3 class="subtitle">Stay Informed and Inspired with LifeBlend Hub's Diverse Content Content</h3>
                     <p class="block__description">Access our extensive collection of articles, videos, and guides to enrich your daily life.</p>
 
@@ -183,7 +183,7 @@
                 </div>
 
                 <div class="discover3__block">
-                    <img src="images/articles/discover3_transform.png" height="222" width="395" alt="boots"/>
+                    <img src="images/articles/discover3_transform.webp" height="222" width="395" alt="boots"/>
                     <h3 class="subtitle">Transform Your Lifestyle with LifeBlend Hub's Expertly Curated Resources</h3>
                     <p class="block__description">Find the tools and resources you need to achieve your goals and live your best life.</p>
 
@@ -222,7 +222,7 @@
                 </div>
             </div>
 
-            <img src="images/articles/discover4_runners.png" height="601" width="601" alt="runners"/>
+            <img src="images/articles/discover4_runners.webp" height="601" width="601" alt="runners"/>
         </article>
     </div>
 
@@ -284,7 +284,7 @@
             </div>
         </div>
 
-        <img class="img__contact" src="images/articles/connect_tennis.png" height="442" width="601" alt="tennis"/>
+        <img class="img__contact" src="images/articles/connect_tennis.webp" height="442" width="601" alt="tennis"/>
     </section>
 </main>
 
