--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 
                 <div class="actions">
                     <button class="btn btn--primary">Learn more</button>
-                    <button class="btn">Sign Up</button>
-                    <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                    <button class="btn btn--arrow">Sign Up</button>
                 </div>
             </div>
 
@@ -131,8 +130,7 @@
 
             <div class="actions">
                 <button class="btn btn--primary">Join</button>
-                <button class="btn">Learn more</button>
-                <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                <button class="btn btn--arrow">Learn more</button>
             </div>
         </article>
 
@@ -148,8 +146,7 @@
 
                 <div class="actions">
                     <button class="btn btn--primary">Learn more</button>
-                    <button class="btn">Sign Up</button>
-                    <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                    <button class="btn btn--arrow">Sign Up</button>
                 </div>
             </div>
 
@@ -166,8 +163,7 @@
                     <p class="block__description">Engage with our curated content and resources to enhance every aspect of your lifestyle.</p>
 
                     <div class="actions">
-                        <button class="btn">Explore</button>
-                        <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                        <button class="btn btn--arrow">Explore</button>
                     </div>
                 </div>
 
@@ -177,8 +173,7 @@
                     <p class="block__description">Access our extensive collection of articles, videos, and guides to enrich your daily life.</p>
 
                     <div class="actions">
-                        <button class="btn">Discover</button>
-                        <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                        <button class="btn btn--arrow">Discover</button>
                     </div>
                 </div>
 
@@ -188,8 +183,7 @@
                     <p class="block__description">Find the tools and resources you need to achieve your goals and live your best life.</p>
 
                     <div class="actions">
-                        <button class="btn">Get Started</button>
-                        <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                        <button class="btn btn--arrow">Get Started</button>
                     </div>
                 </div>
             </div>
@@ -217,8 +211,7 @@
 
                 <div class="actions">
                     <button class="btn btn--primary">Learn more</button>
-                    <button class="btn">Sign Up</button>
-                    <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                    <button class="btn btn--arrow">Sign Up</button>
                 </div>
             </div>
 
@@ -278,8 +271,7 @@
                 </div>
 
                 <div class="actions">
-                    <button class="btn">Get Directions</button>
-                    <img src="images/icons/Arrow.png" height="24" width="24" alt=">"/>
+                    <button class="btn btn--arrow">Get Directions</button>
                 </div>
             </div>
         </div>
