fix(layout): improve pixel perfect layout

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
 
-            <div class="actions">
+            <div class="actions discover1__actions">
                 <button class="btn btn--primary">Join</button>
                 <button class="btn btn--arrow">Learn more</button>
             </div>
